--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "C_Cpp.errorSquiggles": "disabled"
+    "C_Cpp.errorSquiggles": "disabled",
+    "files.associations": {
+        "error.h": "c",
+        "object.h": "c",
+        "player.h": "c",
+        "windowmng.h": "c"
+    }
 }
