guest側のソケット通信プログラムをguest_socket.cに移動

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
         "error.h": "c",
         "object.h": "c",
         "player.h": "c",
-        "windowmng.h": "c"
+        "windowmng.h": "c",
+        "guest_socket.h": "c",
+        "main.h": "c",
+        "data_socket.h": "c"
     }
 }
