config.cを追加し、json形式のconfigファイルから設定を読み込むように変更。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "windowmng.h": "c",
         "guest_socket.h": "c",
         "main.h": "c",
-        "data_socket.h": "c"
+        "data_socket.h": "c",
+        "host_socket.h": "c"
     }
 }
