socketの機能を持つファイルをsocketフォルダに移動

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "guest_socket.h": "c",
         "main.h": "c",
         "data_socket.h": "c",
-        "host_socket.h": "c"
+        "host_socket.h": "c",
+        "version.h": "c"
     }
 }
